package s367945.lab2.classes.bodyparts;

import s367945.lab2.abc.BodyPart;
import s367945.lab2.enums.Property;

public class Leg extends BodyPart {
    public Leg(Property... properties) {
        super(properties);
    }
}
