package s367945.lab2.enums;

public enum Property {
    HUMOROUS(4),
    HOSPITALITY(1),
    GLEEFUL(1),
    GLAD(5),
    GIANT(4),
    GENTLE(7),
    GENIUS(10),
    GENIAL(7),
    HOPEFUL(1),
    HONOURABLE(6),
    HONEST(5),
    HIGH(10),
    HELPFUL(5),
    HEEDFUL(3),
    BALANCE(7),
    ATTRACTIVE(7),
    ARTISTIC(10),
    COLORFUL(2),
    ARTICULATE(1),
    APPROACHABLE(3),
    AMBITIOUS(6),
    AGREEABLE(2),
    HEARTY(10),
    HEART_WARMING(2),
    INTELLIGENT(3),
    HEALTHY(5),
    HARD_WORKING(9),
    MAGIC(2147483647),
    HAPPY(1),
    GREAT(10),
    GRATEFUL(9),
    FRIENDLY(2),
    FREEDOM(9),
    FREE(7),
    FLEXIBLE(10),
    FIT(8),
    FAVORITE(1),
    FANTASTIC(4),
    FAITHFUL(4),
    FAIR(7),
    GORGEOUS(6),
    GOOF(5),
    GOOD_LOOKING(5),
    EASY_GOING(5),
    EASYGOING(6),
    CALM(7),
    BRILLIANT(9),
    BRIGHT(3),
    BRAVO(8),
    BRAVE(10),
    BRAINY(7),
    BLISSFUL(5),
    BIG_HEARTED(9),
    DYNAMIC(5),
    DISCREET(4),
    DISCONTENTED(9),
    DIRECT(5),
    GLORIOUS(7),
    GENEROUS(7),
    FUNNY(4),
    FUN(7),
    FULL(4),
    FRISKY(2),
    FABULOUS(10),
    EXCITING(1),
    DAZZLING(6),
    CULTURED(7),
    COOL(7),
    CONTENTED(5),
    CONSIDERATE(2),
    CONFIDENT(9),
    COMPETENT(2),
    COMFORTABLE(6),
    EXCITED(7),
    EXCITABLE(9),
    EXCELLENT(1),
    EQUAL(10),
    ENTHUSIASTIC(9),
    ENERGETIC(8),
    EMPATHETIC(8),
    EFFICIENT(6),
    EFFECTIVE(9),
    DETERMINED(4),
    DETAILED(10),
    DEPENDABLE(3),
    DELIGHTFUL(9),
    DEDICATED(1),
    DECISIVE(4),
    CLEVER(10),
    ELEGANT(14),
    CLEAN(5),
    CHEERFUL(9),
    CHARMING(4),
    CAUTIOUS(9),
    CAREFUL(5),
    BETTER(7),
    BENEVOLENT(1),
    BELOVED(3),
    BEAUTIFUL(6),
    AFFECTIONATE(9),
    ACCURATE(8),
    ARROGANT(-10),
    OBSTINATE(-6),
    MOODY(-1),
    IMPOLITE(-1),
    SNEAKY(-9),
    BIG_HEADED(-7),
    RESENTFUL(-3),
    CRUEL(-8),
    WET(-1),
    MACHIAVELLIAN(-6),
    ALOOF(-2),
    POMPOUS(-4),
    COWARDLY(-2),
    INTOLERANT(-6),
    SILLY(-8),
    EXHAUSTED(-12),
    OVERCRITICAL(-10),
    DISHONEST(-3),
    PESSIMISTIC(-2),
    VAGUE(-8),
    FUSSY(-6),
    UNTIDY(-2),
    BITCHY(-4),
    FINICKY(-6),
    POSSESSIVE(-4),
    UNTRUSTWORTHY(-4),
    GULLIBLE(-4),
    SECRETIVE(-3),
    DOMINEERING(-8),
    INFLEXIBLE(-5),
    TACTLESS(-7),
    UNRELIABLE(-1),
    INCONSIDERATE(-5),
    PIG_HEADED(-5),
    BOSSY(-4),
    BOASTFUL(-6),
    IRRESPONSIBLE(-4),
    GRUMPY(-2),
    PATRONIZING(-7),
    VAIN(-10),
    CALLOUS(-10),
    CYNICAL(-4),
    NARROW_MINDED(-6),
    DOGMATIC(-1),
    INDECISIVE(-1),
    NASTY(-1),
    IDLE(-5),
    THOUGHTLESS(-9),
    INDISCREET(-4),
    HOSTILE(-5),
    DECEITFUL(-10),
    STUBBORN(-4),
    IMPATIENT(-5),
    CARELESS(-8),
    FOOLISH(-10),
    TOUCHY(-6),
    VULGAR(-6),
    SAD(-7),
    TIRED(-6),
    REGRETFUL(-1),
    GLOOMY(-9),
    FRIGHTENED(-5),
    ASHAMED(-3),
    NERVOUS(-7),
    DEPRESSED(-6),
    ANXIOUS(-5),
    SARDONIC(-7),
    BORED(-2),
    LONELY(-8),
    ANGRY(-1),
    DARK(-4),
    CONFUSED(-3),
    AFRAID(-1),
    CRAZY(-6),
    EMBARRASSED(-5),
    TERRIFIED(-10),
    UNFEELING(-2),
    JEALOUS(-9),
    ELEGIAC(-6),
    DISTRESSED(-7),
    CLUMSY(-3),
    JITTERY(-1),
    FIDGETY(-10),
    RESTLESS(-4),
    THIN(0),
    SLIM(0);

    private final int value;

    Property(int value) {
        this.value = value;
    }

    public int getValue() {
        return this.value;
    }
}
