package s367945.lab2.interfaces;

import s367945.lab2.abc.Creature;

public interface Hugable {
    void onHug(Creature actor);
}
