package s367945.lab2.interfaces;

import s367945.lab2.classes.Pattern;

public interface Patterned{
    Pattern getPattern();
}
