package s367945.lab2.interfaces;

import s367945.lab2.structures.Coordinates;

public interface Positioned {
    Coordinates getPosition();
}
